--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,19 +10,35 @@
   padding: 0;
   margin: 0;
 }
-html {
-  scroll-behavior: smooth;
-}
 
-html,
 body {
   min-width: 100vw;
   overflow-x: hidden;
+  background-color: #000;
+  -webkit-font-smoothing: antialiased;
 }
 
-body {
-  background-color: #000;
+/* lenis recommended */
+html.lenis {
+  height: auto;
 }
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
+}
+/* lenis end */
 
 a {
   color: inherit;
@@ -35,27 +51,6 @@ a {
   padding: 0.5rem;
 }
 
-
-
-#smooth-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
-  min-height: 100vh;
-  /* -webkit-transform-origin: top left;
-    transform-origin: top left;
-     -webkit-transform: translate3D(-159vw,-200vh,0) scale(36);
-    transform: translate3D(-159vw,-200vh,0) scale(36);  */
-}
-
 .cursor-element {
   background: #fff;
   width: 20px;
@@ -65,7 +60,7 @@ a {
   z-index: 999;
   top: 0;
   left: 0;
-  transform: translate3d(0, 0, 0);
+  transform: translate(0, 0);
   transition: transform 300ms cubic-bezier(0.02, 1.23, 0.79, 1.08);
 
   /* TODO */
@@ -134,3 +129,50 @@ button {
     -webkit-clip-path: inset(100% 0 0 0);
   }
 }
+
+/* bg star styles */
+
+/* .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -5;
+  width: 100vw;
+  height: 100vh;
+}
+
+.bg {
+  width: 100%;
+  height: 100%;
+}
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.stars-bg__star {
+  opacity: 0;
+  animation: blink 3.5s infinite;
+  fill: #fff;
+  fill-rule: evenodd;
+}
+.stars-bg__blink-2 {
+  animation-delay: 1s;
+}
+.stars-bg__blink-3 {
+  animation-delay: 2s;
+}
+.hello {
+  margin: 50px auto;
+  display: block;
+  width: 200px;
+  color: #fff;
+  opacity: 0.3;
+  font-family: sans-serif;
+} */
