--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -2,9 +2,11 @@
   position: relative;
   height: 100vh;
   width: 100vw;
-  transform-origin: 50% 90%;
   background-color: #131313;
-  transition: transform 275ms linear, opacity 275ms linear;
+  transform-origin: 50% 90%;
+  will-change: transform, opacity;
+  opacity: 1;
+  transform: perspective(2000px) rotateX(0) scale(1);
   overflow: hidden;
 }
 
@@ -24,7 +26,8 @@
 .hero-mask-author-info-container {
   display: grid;
   place-items: center;
- overflow: hidden;
+  overflow: hidden;
+  padding-inline: 0.8rem;
 }
 
 .hero-author-info-wrapper,
@@ -48,8 +51,8 @@
 }
 
 :is(.hero-main-heading, .hero-mask-main-heading) span:first-child {
-  font-size: 2rem;
-  font-weight: 500;
+  font-size: 1.7rem;
+  font-weight: 400;
 }
 
 :is(.hero-main-heading, .hero-mask-main-heading) span:last-child {
@@ -64,7 +67,8 @@
 
 .hero-author-info-wrapper > p,
 .hero-mask-author-info-wrapper > p {
-  margin-block: 1rem;
+  margin-block-start: 0.2rem;
+  margin-block-end: 1rem;
   font-size: 1.1rem;
   line-height: 1.5;
 }
@@ -76,12 +80,15 @@
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  transform: translateX(0);
-  transition: transform 2500ms ease-out;
 }
 
-.hero-author-info-wrapper > img {
+:is(.hero-author-info-wrapper, .hero-social-btns-wrapper) img {
   filter: grayscale(1);
+}
+
+:is(.hero-social-btns-wrapper, .hero-mask-social-btns-wrapper) img {
+  width: 35px;
+  height: 35px;
 }
 
 .hero-social-btns-wrapper,
@@ -91,13 +98,6 @@
   gap: 1rem;
 }
 
-.hero-social-btns-wrapper > * + *,
-.hero-mask-social-btns-wrapper > * + * {
- margin-inline-start: 1rem;
-}
-
-
-
 .hero-mask-author-info-container {
   position: absolute;
   top: 0;
@@ -105,68 +105,61 @@
   width: 100%;
   height: 100%;
   background-color: #0a2647;
-  clip-path: circle(100% at -28% 50%);
-  -wekit-clip-path: circle(100% at -28% 50%);
-  transition: clip-path 700ms ease-out, -wekit-clip-path 700ms ease-out;
+
+  will-change: clip-path, -webkit-clip-path;
+  clip-path: inset(0 50% 0 0);
+  -webkit-clip-path: inset(0 50% 0 0);
+  transition: clip-path 700ms ease-out, -webkit-clip-path 700ms ease-out;
 }
 
 /* gradient styles */
 .mask-gradient-bottom-left-wrapper,
 .gradient-bottom-left-wrapper,
 .gradient-top-right-wrapper,
-.mask-gradient-top-right-wrapper{
+.mask-gradient-top-right-wrapper {
   position: absolute;
   z-index: -2;
 }
 
 .gradient-bottom-left-wrapper,
-.mask-gradient-bottom-left-wrapper{
+.mask-gradient-bottom-left-wrapper {
   left: -5%;
-  bottom: 25%;
+  bottom: 29%;
   transform: rotate(-30deg);
 }
 
 .gradient-top-right-wrapper,
-.mask-gradient-top-right-wrapper{
-  top: 25%;
+.mask-gradient-top-right-wrapper {
+  top: 20%;
   right: -5%;
   transform: rotate(-30deg);
 }
 
-
-
-.gradient-1, .gradient-2{
-  width: 1000px;
+.gradient-1,
+.gradient-2 {
+  width: 52vw;
   height: 30px;
   filter: blur(38px);
   opacity: 0.7;
   border-radius: 70px;
 }
 
-:is(.mask-gradient-top-right-wrapper,.mask-gradient-bottom-left-wrapper ) :is(.gradient-1){
+:is(.mask-gradient-top-right-wrapper, .mask-gradient-bottom-left-wrapper)
+  :is(.gradient-1) {
   background-color: #38bdf8;
 }
-:is(.mask-gradient-top-right-wrapper,.mask-gradient-bottom-left-wrapper ) :is(.gradient-2){
+:is(.mask-gradient-top-right-wrapper, .mask-gradient-bottom-left-wrapper)
+  :is(.gradient-2) {
   background-color: #c084fc;
 }
-:is(.gradient-top-right-wrapper,.gradient-bottom-left-wrapper ) :is(.gradient-1){
+:is(.gradient-top-right-wrapper, .gradient-bottom-left-wrapper)
+  :is(.gradient-1) {
   background-color: #777;
 }
-:is(.gradient-top-right-wrapper,.gradient-bottom-left-wrapper ) :is(.gradient-2){
+:is(.gradient-top-right-wrapper, .gradient-bottom-left-wrapper)
+  :is(.gradient-2) {
   background-color: #777;
 }
-
-/* .gradient-1{
-  background-color: #38bdf8;
-}
-
-.gradient-2{
-  background-color: #c084fc;
- 
-} */
-
-
-
 
 /* avatars style */
 .boring-avatars-1,
@@ -174,12 +167,12 @@
 .boring-avatars-3,
 .boring-avatars-4,
 .boring-avatars-5,
-.boring-avatars-6
- {
+.boring-avatars-6 {
   position: absolute;
   z-index: -1;
-  transform: translate3d(0, 0, 0);
-  transition: transform 400ms ease-out;
+  will-change: transform;
+  transform: translate(0, 0);
+  transition: transform 325ms ease-out;
 }
 
 .boring-avatars-1 {
@@ -241,114 +234,20 @@
   color: gray;
 }
 
-/* .hero-container {
-  height: 100%;
-  width: 100%;
+@media (max-width: 576px) {
+
+  :is(.hero-main-heading, .hero-mask-main-heading) span:first-child {
+    font-size: 1.5rem;
+    font-weight: 400;
+  }
+  :is(.hero-main-heading, .hero-mask-main-heading) span:last-child {
+    font-size: 2.3rem;
+    font-weight: 600;
+  }
+
+  .hero-author-info-wrapper > img,
+  .hero-mask-author-info-wrapper > img {
+    width: 150px;
+    height: 150px;
+  }
 }
-
-.hero-title-container {
-  padding: 6rem 1rem 0 1rem;
-
- 
-}
-
-.hero-full-container h1 {
-  width: 100%;
-  font-size: max(4rem, 13vw);
-  font-weight: 900;
-  line-height: 1;
-  text-transform: uppercase;
-  text-align: center;
-  color: #777777;
-}
-
-.hero-full-container h1:nth-of-type(1) {
-  margin-bottom: 4rem;
-}
-
-.developer,
-.creative {
-  width: 100%;
-  perspective: 350px;
-  text-align: center;
-}
-
-.developer-first,
-.developer-second,
-.creative-first,
-.creative-second {
-  transform-style: preserve-3d;
-  display: inline-block;
-  position: relative;
-  overflow: hidden;
-}
-
-.developer-first > span,
-.developer-second > span,
-.creative-first > span,
-.creative-second > span {
-  display: inline-block;
-}
-
-.developer-first,
-.creative-first {
-  transform-origin: right;
-  transform: rotateY(6deg);
-}
-.developer-second,
-.creative-second {
-  transform-origin: left;
-  transform: rotateY(-5deg);
-}
-
-.developer-letter-bg-1,
-.developer-letter-bg-2,
-.creative-letter-bg-1,
-.creative-letter-bg-2 {
-  position: absolute;
-  top: 0;
-  z-index: -1;
-  width: 0;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-  opacity: 0;
-  transition: all 500ms ease-out;
-  border-radius: 4px;
-}
-
-.developer-letter-bg-1,
-.creative-letter-bg-1 {
-  left: 0;
-}
-
-.developer-letter-bg-2,
-.creative-letter-bg-2 {
-  left: 100%;
-}
-
-.hero-layer-container {
-  --x: 400px;
-  --y: 400px;
-  --size: 200px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 99;
-  width: 100%;
-  height: 100%;
-}
-
-.hero-layer-container .creative,
-.hero-layer-container .developer {
-  --size: 0%;
-  --x: 50%;
-  --y: 50%;
-
-  color: #fff;
-  clip-path: circle(var(--size) at var(--x) var(--y));
-  -webkit-clip-path: circle(var(--size) at var(--x) var(--y));
-
-  pointer-events: none;
-  transition: clip-path 400ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
-    -webkit-clip-path 400ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-} */
