--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,9 @@
 :root {
   --max-width: 1400px;
   --nav-bg: #a3a59e;
+  --primary-bg: #0a2647;
+  --black-white-bg: #131313;
+  --fz-400: 1rem;
 }
 
 *,
@@ -51,7 +54,7 @@ a {
   padding: 0.5rem;
 }
 
-.cursor-element {
+/* .cursor-element {
   background: #fff;
   width: 20px;
   height: 20px;
@@ -63,9 +66,9 @@ a {
   transform: translate(0, 0);
   transition: transform 300ms cubic-bezier(0.02, 1.23, 0.79, 1.08);
 
-  /* TODO */
+  
   display: none;
-}
+} */
 
 button {
   background-color: transparent;
@@ -74,7 +77,7 @@ button {
   color: #fff;
 }
 
-.loader {
+/* .loader {
   position: fixed;
   top: 0;
   left: 0;
@@ -87,7 +90,7 @@ button {
   background-color: #131313;
   transform: translateY(-100%);
   transition: transform 500ms cubic-bezier(0.7, 0, 0.2, 1);
-}
+} */
 
 .isLoaderShow {
   transform: translateY(0%);
@@ -128,6 +131,12 @@ button {
     clip-path: inset(100% 0 0 0);
     -webkit-clip-path: inset(100% 0 0 0);
   }
+}
+
+
+::-webkit-scrollbar{
+  /* display: none; */
+  /* pointer-events: none; */
 }
 
 /* bg star styles */
