--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,8 +1,16 @@
+.hero-anchor-scroll {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
 .hero-full-container {
   position: relative;
   height: 100vh;
   width: 100vw;
   background-color: #131313;
+  transform-style: preserve-3d;
   transform-origin: 50% 90%;
   will-change: transform, opacity;
   opacity: 1;
@@ -51,12 +59,12 @@
 }
 
 :is(.hero-main-heading, .hero-mask-main-heading) span:first-child {
-  font-size: 1.7rem;
+  font-size: clamp(1.7rem, 1.5vw, 2.3rem);
   font-weight: 400;
 }
 
 :is(.hero-main-heading, .hero-mask-main-heading) span:last-child {
-  font-size: 3rem;
+  font-size: clamp(2.3rem, 2.5vw, 3rem);
   font-weight: 600;
 }
 
@@ -69,7 +77,7 @@
 .hero-mask-author-info-wrapper > p {
   margin-block-start: 0.2rem;
   margin-block-end: 1rem;
-  font-size: 1.1rem;
+  font-size: clamp(1.1rem, 1vw, 1.5rem);
   line-height: 1.5;
 }
 
@@ -77,8 +85,8 @@
 .hero-mask-author-info-wrapper > img {
   object-fit: cover;
   object-position: top;
-  width: 200px;
-  height: 200px;
+  width: clamp(150px, 10.5vw, 200px);
+  height: clamp(150px, 10.5vw, 200px);
   border-radius: 50%;
 }
 
@@ -109,7 +117,8 @@
   will-change: clip-path, -webkit-clip-path;
   clip-path: inset(0 50% 0 0);
   -webkit-clip-path: inset(0 50% 0 0);
-  transition: clip-path 700ms ease-out, -webkit-clip-path 700ms ease-out;
+  transition: clip-path 1s cubic-bezier(0.33, 1, 0.68, 1),
+    -webkit-clip-path 1s cubic-bezier(0.33, 1, 0.68, 1);
 }
 
 /* gradient styles */
@@ -235,27 +244,8 @@
 }
 
 @media (max-width: 992px) {
-  .hero-mask-author-info-container{
+  .hero-mask-author-info-container {
     clip-path: inset(0 0 0 0);
     -webkit-clip-path: inset(0 0 0 0);
-  }
-}
-
-
-@media (max-width: 576px) {
-
-  :is(.hero-main-heading, .hero-mask-main-heading) span:first-child {
-    font-size: 1.5rem;
-    font-weight: 400;
-  }
-  :is(.hero-main-heading, .hero-mask-main-heading) span:last-child {
-    font-size: 2.3rem;
-    font-weight: 600;
-  }
-
-  .hero-author-info-wrapper > img,
-  .hero-mask-author-info-wrapper > img {
-    width: 150px;
-    height: 150px;
   }
 }
