--- a/src/components/Works/works.css
+++ b/src/components/Works/works.css
@@ -24,7 +24,7 @@
 .works-info-wrapper,
 .works-mask-info-wrapper {
   display: flex;
-  gap: 12rem;
+  gap: 10rem;
   width: max-content;
   height: 100%;
   padding: 5rem 12rem;
@@ -59,12 +59,25 @@
   justify-content: flex-start;
   color: #fff;
   z-index: 2;
+  border-block-end: 1px solid #ffffff16;
+}
+
+.work-1-info-wrapper:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 3%;
+  right: 0;
+  height: 94%;
+  width: 1px;
+  margin-block: auto;
+  background-color: #ffffff16;
+  transform: translateX(5rem);
 }
 
 .work-info-img-wrapper {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 250px;
 }
 
 .work-1-info-wrapper > * + * {
@@ -149,10 +162,10 @@
   --x: 0px;
   --y: 0px;
   --size: 0px;
-  transition: -webkit-mask-position 350ms cubic-bezier(0.165, 0.84, 0.44, 1),
+  /* transition: -webkit-mask-position 350ms cubic-bezier(0.165, 0.84, 0.44, 1),
     mask-position 350ms cubic-bezier(0.165, 0.84, 0.44, 1),
     -webkit-mask-size 400ms cubic-bezier(0.165, 0.84, 0.44, 1),
-    mask-size 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    mask-size 400ms cubic-bezier(0.165, 0.84, 0.44, 1); */
   mask-image: url("../../../public/test-mask.svg");
   -webkit-mask-image: url("../../../public/test-mask.svg");
   mask-origin: border-box;
@@ -182,9 +195,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99;
-  opacity: 0;
-  transition: opacity 200ms ease-out;
+  transform: scale(0);
+  z-index: 100;
   width: 80px;
   height: 80px;
   background-color: #0a2647;
@@ -195,13 +207,27 @@
 
 .work-demo-link-wrapper {
   display: none;
+  width: fit-content;
   padding-block-start: 0.4rem;
 }
 
 .work-demo-link-wrapper > a {
+  display: block;
+  position: relative;
   font-size: 1.2rem;
-  text-decoration: underline;
   color: #cad1d8;
+  isolation: isolate;
+}
+
+.work-demo-link-wrapper > a::before {
+  content: "";
+  position: absolute;
+  top: 70%;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 4px;
+  background-color: #0070f3;
 }
 
 @media (max-width: 1024px) {
@@ -209,6 +235,10 @@
   .works-mask-info-wrapper {
     gap: 6rem;
     padding: 3rem 6rem;
+  }
+
+  .work-1-info-wrapper:not(:last-child)::after {
+    transform: translateX(3rem);
   }
 }
 
@@ -229,12 +259,22 @@
     padding: 1.5rem 4rem;
   }
 
+  .work-1-info-wrapper:not(:last-child)::after {
+    transform: translateX(2rem);
+  }
+
+  .work-info-img-wrapper {
+    height: 200px;
+  }
+
   .work-1-info-wrapper,
   .work-1-img-wrapper {
     width: 400px;
     height: 100%;
     position: relative;
   }
+
+  
 }
 
 @media (max-width: 576px) {
