--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -34,7 +34,6 @@
 .hero-mask-author-info-container {
   display: grid;
   place-items: center;
-  overflow: hidden;
   padding-inline: 0.8rem;
 }
 
@@ -113,62 +112,54 @@
   width: 100%;
   height: 100%;
   background-color: #0a2647;
-
-  will-change: clip-path, -webkit-clip-path;
   clip-path: inset(0 50% 0 0);
-  -webkit-clip-path: inset(0 50% 0 0);
-  transition: clip-path 1s cubic-bezier(0.33, 1, 0.68, 1),
-    -webkit-clip-path 1s cubic-bezier(0.33, 1, 0.68, 1);
+  transition: clip-path 1s cubic-bezier(0.33, 1, 0.68, 1);
+  isolation: isolate;
 }
 
-/* gradient styles */
-.mask-gradient-bottom-left-wrapper,
-.gradient-bottom-left-wrapper,
-.gradient-top-right-wrapper,
-.mask-gradient-top-right-wrapper {
+.hero-author-info-container {
+  position: relative;
+  isolation: isolate;
+}
+
+/* background gradient styles starts */
+.hero-author-info-container::before,
+.hero-author-info-container::after,
+.hero-mask-author-info-container::before,
+.hero-mask-author-info-container::after {
+  content: "";
   position: absolute;
-  z-index: -2;
-}
-
-.gradient-bottom-left-wrapper,
-.mask-gradient-bottom-left-wrapper {
-  left: -5%;
-  bottom: 29%;
-  transform: rotate(-30deg);
-}
-
-.gradient-top-right-wrapper,
-.mask-gradient-top-right-wrapper {
-  top: 20%;
-  right: -5%;
-  transform: rotate(-30deg);
-}
-
-.gradient-1,
-.gradient-2 {
-  width: 52vw;
-  height: 30px;
+  width: 52%;
+  height: 60px;
   filter: blur(38px);
   opacity: 0.7;
   border-radius: 70px;
+  transform: rotate(-30deg);
 }
 
-:is(.mask-gradient-top-right-wrapper, .mask-gradient-bottom-left-wrapper)
-  :is(.gradient-1) {
-  background-color: #38bdf8;
-}
-:is(.mask-gradient-top-right-wrapper, .mask-gradient-bottom-left-wrapper)
-  :is(.gradient-2) {
+.hero-mask-author-info-container::before,
+.hero-mask-author-info-container::after {
   background-color: #c084fc;
+  background-image: linear-gradient(#38bdf8 50%, #c084fc 50%);
 }
-:is(.gradient-top-right-wrapper, .gradient-bottom-left-wrapper)
-  :is(.gradient-1) {
+
+.hero-author-info-container::before,
+.hero-author-info-container::after {
   background-color: #777;
+  background-image: linear-gradient(#777 50%, #777 50%);
 }
-:is(.gradient-top-right-wrapper, .gradient-bottom-left-wrapper)
-  :is(.gradient-2) {
-  background-color: #777;
+
+:is(.hero-author-info-container, .hero-mask-author-info-container)::before {
+  left: -5%;
+  bottom: 29%;
+  z-index: -1;
 }
+:is(.hero-author-info-container, .hero-mask-author-info-container)::after {
+  top: 20%;
+  right: -5%;
+  z-index: -2;
+}
+/* background gradient styles ends */
 
 /* avatars style */
 .boring-avatars-1,
@@ -179,9 +170,6 @@
 .boring-avatars-6 {
   position: absolute;
   z-index: -1;
-  will-change: transform;
-  transform: translate(0, 0);
-  transition: transform 325ms ease-out;
 }
 
 .boring-avatars-1 {
