--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -117,6 +117,7 @@
   width: 100%;
   height: 100%;
   background-color: #0a2647;
+  will-change: clip-path;
   clip-path: inset(0 50% 0 0);
   transition: clip-path 1s cubic-bezier(0.33, 1, 0.68, 1);
   isolation: isolate;
