--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,43 +54,12 @@ a {
   padding: 0.5rem;
 }
 
-/* .cursor-element {
-  background: #fff;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  left: 0;
-  transform: translate(0, 0);
-  transition: transform 300ms cubic-bezier(0.02, 1.23, 0.79, 1.08);
-
-  
-  display: none;
-} */
-
 button {
   background-color: transparent;
   border: none;
   font: inherit;
   color: #fff;
 }
-
-/* .loader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  width: 100vw;
-  height: 100vh;
-
-  display: grid;
-  place-items: center;
-  background-color: #131313;
-  transform: translateY(-100%);
-  transition: transform 500ms cubic-bezier(0.7, 0, 0.2, 1);
-} */
 
 .isLoaderShow {
   transform: translateY(0%);
@@ -122,7 +91,8 @@ button {
   animation: clipPath 2s linear 1 forwards;
 }
 
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
 }
 
@@ -136,56 +106,3 @@ button {
     -webkit-clip-path: inset(100% 0 0 0);
   }
 }
-
-
-::-webkit-scrollbar{
-  /* display: none; */
-  /* pointer-events: none; */
-}
-
-/* bg star styles */
-
-/* .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -5;
-  width: 100vw;
-  height: 100vh;
-}
-
-.bg {
-  width: 100%;
-  height: 100%;
-}
-@keyframes blink {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0.6;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-.stars-bg__star {
-  opacity: 0;
-  animation: blink 3.5s infinite;
-  fill: #fff;
-  fill-rule: evenodd;
-}
-.stars-bg__blink-2 {
-  animation-delay: 1s;
-}
-.stars-bg__blink-3 {
-  animation-delay: 2s;
-}
-.hello {
-  margin: 50px auto;
-  display: block;
-  width: 200px;
-  color: #fff;
-  opacity: 0.3;
-  font-family: sans-serif;
-} */
