--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -109,17 +109,25 @@
   gap: 1rem;
 }
 
+.hero-mask-layer-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  will-change: transform;
+  overflow: hidden;
+}
+
 .hero-mask-author-info-container {
   position: absolute;
   isolation: isolate;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: #0a2647;
-  will-change: clip-path;
-  clip-path: inset(0 50% 0 0);
-  transition: clip-path 1s cubic-bezier(0.33, 1, 0.68, 1);
+  will-change: transform;
 }
 
 .hero-author-info-container {
@@ -234,11 +242,4 @@
 
 .hero-author-info-container > .boring-avatars-1 {
   color: gray;
-}
-
-@media (max-width: 799px) {
-  .hero-mask-author-info-container {
-    clip-path: inset(0 0 0 0);
-    -webkit-clip-path: inset(0 0 0 0);
-  }
 }
