--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -79,6 +79,7 @@ footer {
 .footer-email-wrapper,
 .footer-number-wrapper {
   font-size: 1.2rem;
+  color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(255, 255, 255, 0.15);
   padding: 0.8rem 1rem;
   border-top-right-radius: 0.7rem;
