pause cube rotation when not in viewport for cpu  optimization

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -121,6 +121,11 @@ footer {
   position: relative;
   transform-style: preserve-3d;
   transform: translateZ(-175px);
+  /* animation: spinCube 30s infinite linear; */
+ 
+}
+
+.cube-wrapper.play-cube .cube{
   animation: spinCube 30s infinite linear;
 }
 
