compress img & change img format to webp to improve user experience

--- a/src/components/Works/works.css
+++ b/src/components/Works/works.css
@@ -38,7 +38,7 @@
   left: 0;
   z-index: 99;
 
-  background-image: url("../../../public/images/texture-dark.jpg");
+  background-image: url("../../../public/images/texture-dark.webp");
   background-position: center;
   background-size: 100% 100%;
   background-repeat: no-repeat;
